--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -8,78 +8,25 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Montserrat', sans-serif;
       background-color: #1a1a1a;
       color: white;
     }
 
-    .gradient-border {
-      border: 4px solid;
-      border-image: linear-gradient(to right, #06954E, #064D95, #950606) 1;
-      padding: 30px 20px;
-      margin: 20px;
-      border-radius: 12px;
-      flex: 1;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
-
-    h1 {
-      text-align: center;
-      font-style: italic;
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    p.subheading {
-      text-align: center;
-      font-size: 1.1rem;
-      max-width: 700px;
-      margin: 0 auto 50px;
-    }
-
-    .card-container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .gradient-border h2 {
-      margin-top: 0;
-      font-size: 1.6rem;
-    }
-
-    ul {
-      padding-left: 20px;<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Premium Packages</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #1a1a1a;
-      color: white;
+    .border-wrapper {
+      padding: 20px;
+      border: 12px solid;
+      border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
+      min-height: 100vh;
     }
 
     h1 {
       text-align: center;
       font-style: italic;
       font-size: 2.8rem;
-      margin-top: 40px;
-      margin-bottom: 15px;
+      margin-top: 20px;
+      margin-bottom: 12px;
       text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
     }
 
@@ -87,7 +34,7 @@
       text-align: center;
       font-size: 1.1rem;
       max-width: 720px;
-      margin: 0 auto 50px;
+      margin: 0 auto 40px;
     }
 
     .card-container {
@@ -95,7 +42,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
-      padding: 0 20px 60px;
+      padding-bottom: 60px;
     }
 
     .card {
@@ -121,7 +68,8 @@
     }
 
     .price {
-      font-size: 1.8rem;
+      font-size: 2rem;
+      font-weight: bold;
       margin: 10px 0 20px;
     }
 
@@ -129,12 +77,17 @@
       background-color: white;
       color: black;
       font-weight: bold;
+      font-size: 1.1rem;
+      padding: 14px 26px;
       border: none;
-      padding: 10px 22px;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
       margin-bottom: 25px;
-      font-size: 1rem;
+      transition: background-color 0.3s;
+    }
+
+    .button:hover {
+      background-color: #e0e0e0;
     }
 
     .card ul {
@@ -163,45 +116,49 @@
   </style>
 </head>
 <body>
-  <h1>Reveal the Psychology Behind Your Pleasure</h1>
-  <p class="subheading">Get an in-depth look at your sexual profile, including what turns you on, who you’re drawn to, and why. Pick the package that fits best for you.</p>
+  <div class="border-wrapper">
+    <h1>Reveal the Psychology Behind Your Pleasure</h1>
+    <p class="subheading">
+      Get an in-depth look at your sexual profile, including what turns you on, who you’re drawn to, and why. Pick the package that fits best for you.
+    </p>
 
-  <div class="card-container">
-    <div class="card">
-      <h2>Your Erotic Blueprint</h2>
-      <p class="price">$9</p>
-      <button class="button">Continue</button>
-      <ul>
-        <li>Full deep-dive profile of your erotic archetype</li>
-        <li>Erotic short story tailored to your sexual profile</li>
-        <li>Turn-ons, desires, and romantic behavior decoded</li>
-        <li>Relationship strategies based on your style</li>
-      </ul>
-    </div>
+    <div class="card-container">
+      <div class="card">
+        <h2>Your Erotic Blueprint</h2>
+        <p class="price">$9</p>
+        <button class="button">Continue</button>
+        <ul>
+          <li>Full deep-dive profile of your erotic archetype</li>
+          <li>Erotic short story tailored to your sexual profile</li>
+          <li>Turn-ons, desires, and romantic behavior decoded</li>
+          <li>Relationship strategies based on your style</li>
+        </ul>
+      </div>
 
-    <div class="card">
-      <h2>Compatibility Package</h2>
-      <p class="price">$27</p>
-      <button class="button">Continue</button>
-      <ul>
-        <li>Everything from the Erotic Blueprint package</li>
-        <li>Erotic blueprints of your Top 3 compatibility matches including:</li>
-        <li>Full deep-dive breakdown</li>
-        <li>Erotic short story for each type</li>
-        <li>Turn-ons, power dynamics, & more</li>
-      </ul>
-    </div>
+      <div class="card">
+        <h2>Compatibility Package</h2>
+        <p class="price">$27</p>
+        <button class="button">Continue</button>
+        <ul>
+          <li>Everything from the Erotic Blueprint package</li>
+          <li>Erotic blueprints of your Top 3 compatibility matches including:</li>
+          <li>Full deep-dive breakdown</li>
+          <li>Erotic short story for each type</li>
+          <li>Turn-ons, power dynamics, & more</li>
+        </ul>
+      </div>
 
-    <div class="card">
-      <h2>The Forbidden Library</h2>
-      <p class="price">$39</p>
-      <button class="button">Continue</button>
-      <ul>
-        <li>Access to all 12 erotic blueprints</li>
-        <li>Deep-dive of all sexual profiles</li>
-        <li>All 12 premium erotic short stories</li>
-        <li>Compare turn-ons, power dynamics, conflict patterns, & more</li>
-      </ul>
+      <div class="card">
+        <h2>The Forbidden Library</h2>
+        <p class="price">$39</p>
+        <button class="button">Continue</button>
+        <ul>
+          <li>Access to all 12 erotic blueprints</li>
+          <li>Deep-dive of all sexual profiles</li>
+          <li>All 12 premium erotic short stories</li>
+          <li>Compare turn-ons, power dynamics, conflict patterns, & more</li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
