--- a/premium-profiles.html
+++ b/premium-profiles.html
@@ -142,9 +142,8 @@
         <ul>
           <li>Everything from the Erotic Blueprint package</li>
           <li>Erotic blueprints of your Top 3 compatibility matches including:</li>
-          <li>Full deep-dive breakdown</li>
           <li>Erotic short story for each type</li>
-          <li>Turn-ons, power dynamics, & more</li>
+          <li>Turn-ons, power dynamics, & full deep-dive breakdown</li>
         </ul>
       </div>
 
