--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -1,1 +1,286 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tender Protector – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #1a1a1a;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 2rem;
+      border: 8px solid;
+      border-image: linear-gradient(to right, #06954E, #064D95, #950606) 1;
+    }
+    h1 {
+      font-style: italic;
+      color: #064D95;
+      text-align: center;
+      font-size: 2.5rem;
+      text-shadow: 0 0 6px #064D95;
+    }
+    h2 {
+      font-size: 1.8rem;
+      margin-top: 2rem;
+      color: #ffffff;
+      border-bottom: 2px solid #064D95;
+      padding-bottom: 0.3rem;
+    }
+    .slogan {
+      font-style: italic;
+      text-align: center;
+      font-size: 1.2rem;
+      margin-top: -1rem;
+      margin-bottom: 2rem;
+      color: #ccc;
+    }
+    .images-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2px;
+      margin: 2rem 0;
+    }
+    .image-wrapper {
+      border: 4px solid #064D95;
+      padding: 0;
+      margin: 0;
+    }
+    .divider {
+      width: 4px;
+      background-color: #064D95;
+      height: 100%;
+    }
+    .content-section {
+      margin-bottom: 2rem;
+    }
+    .content-section ul {
+      padding-left: 1.2rem;
+    }
+    .content-section li {
+      margin-bottom: 0.5rem;
+    }
+    .italic {
+      font-style: italic;
+    }
+    .quote {
+      color: #aaaaaa;
+      font-style: italic;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>Tender Protector</h1>
+  <p class="slogan">"I notice everything. Especially you."</p>
 
+  <div class="images-container">
+    <div class="image-wrapper">
+      <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" width="300">
+    </div>
+    <div class="divider"></div>
+    <div class="image-wrapper">
+      <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" width="300">
+    </div>
+  </div>
+
+  <div class="content-section">
+    <h2>Description</h2>
+    <p>Tender Protectors are emotionally attuned dominants who lead with presence, calm, and care. They notice what others miss and hold space with quiet authority. Their style isn’t about control for its own sake—it’s about making you feel safe enough to unravel. When they give commands, it’s not a performance. It’s earned. They thrive when partnered with someone who trusts their intentions, honors their steadiness, and melts under their calm dominance.</p>
+  </div>
+
+  <div class="content-section">
+    <h2>Power Dynamic Arc</h2>
+    <p><strong>Relationship Trajectory:</strong><br>
+    Tender Protectors are stable dominants. Their leadership is grounded in emotional attunement rather than ego. They are least likely to initiate polarity shifts unless it’s to recalibrate for the sake of their partner’s well-being.</p>
+    <ul>
+      <li>Dominant stays dominant → 📈 Stable upward trend</li>
+      <li>Healthy, long-term dynamic. Emotional security and trust deepen over time.</li>
+      <li>Submissive partner becomes dominant → 📉 Steep drop</li>
+      <li>Tender Protector becomes emotionally destabilized. Role confusion sets in.</li>
+      <li>Tender Protector temporarily softens (but remains dominant) → 📊 Gentle correction</li>
+      <li>Creates space for intimacy while maintaining control.</li>
+      <li>Tender Protector becomes submissive → 🚨 Crash</li>
+      <li>Total polarity collapse. Loss of self-identity. Relationship likely to fail.</li>
+    </ul>
+    <p><strong>Ideal Dynamic:</strong><br>
+    A gentle but firm dominance paired with a devoted or emotionally attuned submissive creates the most secure and satisfying connection. Think “earned trust” rather than strict control.</p>
+  </div>
+
+  <div class="content-section">
+    <h2>Origins of Desire</h2>
+    <ul>
+      <li><strong>Evolutionary Biological Theory:</strong> Their desire to protect is tied to deep-rooted evolutionary traits. They’re wired to safeguard those they care for.</li>
+      <li><strong>Self-Esteem Theory:</strong> They gain sexual confidence through being trusted. The more they are relied on, the more potent they feel.</li>
+      <li><strong>Imprintation Theory:</strong> Early arousal may have been tied to moments of comforting or rescuing—cementing a lifelong erotic association with care.</li>
+      <li><strong>Blank Slate Theory:</strong> Many were taught to “be strong” or “keep it together,” so arousal becomes tied to leading gently and being needed.</li>
+    </ul>
+  </div>
+
+  <div class="content-section">
+    <h2>Turn-On Vocabulary</h2>
+    <ul>
+      <li>“I feel so safe with you.”</li>
+      <li>“Whatever you say.”</li>
+      <li>“I trust you.”</li>
+      <li>“Please take care of me.”</li>
+      <li>“I need you.”</li>
+      <li>“No one else makes me feel like this.”</li>
+      <li>“Tell me what to do.”</li>
+      <li>“You’re in charge.”</li>
+      <li>“Thank you for looking out for me.”</li>
+      <li>“I’m all yours.”</li>
+    </ul>
+  </div>
+
+  <div class="content-section">
+    <h2>Conflict Pattern</h2>
+    <p><strong>Tendencies During Conflict:</strong></p>
+    <ul>
+      <li>Bottles emotions to maintain calm</li>
+      <li>Becomes over-responsible, over-explains</li>
+      <li>Feels hurt when their care isn’t appreciated</li>
+      <li>May withdraw if they feel unappreciated</li>
+    </ul>
+    <p><strong>Triggers:</strong></p>
+    <ul>
+      <li>Being perceived as controlling</li>
+      <li>Their care being misinterpreted as manipulation</li>
+      <li>Partner acting recklessly or making decisions without them</li>
+    </ul>
+    <p><strong>Resolution Style:</strong></p>
+    <ul>
+      <li>Needs open appreciation and verbal reassurance</li>
+      <li>Responds best to “I know you were trying to protect me” rather than defensiveness</li>
+      <li>Calms down quickly once their intentions are validated</li>
+    </ul>
+    <p><strong>Growth Edge:</strong></p>
+    <ul>
+      <li>Learning to express their own needs instead of only prioritizing others’</li>
+      <li>Asking rather than assuming what the partner needs</li>
+    </ul>
+  </div>
+
+  <div class="content-section">
+    <h2>Erotic Edge & Drop</h2>
+    <p><strong>Erotic Edge:</strong><br>
+    They create emotional safewords. What others crave is how deeply attuned they are—how they can command while still being gentle, read their partner’s breath, and provide security even while being intense. Their superpower is empathic dominance.</p>
+    <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+    Being disrespected, mocked, or treated like they’re weak for being emotionally available. They shut down instantly if their care is mistaken for weakness or control.</p>
+  </div>
+
+  <div class="content-section">
+    <h2>Erotic Short Story</h2>
+    <p>[You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.
+
+They’re already standing there, near the center of the room. Waiting.
+
+Their eyes lift to meet yours, wide and uncertain, but not afraid. There’s something else underneath the nerves. A quiet tension. Desire, yes. But also relief. Like they’ve been holding something in all day and now, finally, they don’t have to anymore.
+
+You don’t rush. You take your time hanging your coat, rolling your sleeves. The air shifts with each movement you make, deliberate and calm. Your presence takes up space without force, and you know they can feel it.
+
+When you walk toward them, their breath changes. You hear it catch. They stay rooted where they are, but their hands fidget at their sides. You stop just inches from them, close enough for the heat of your body to wrap around theirs.
+
+You lift their chin with your fingers, slow and certain, until their eyes are on yours again.
+
+“You want to take your clothes off, don’t you.”
+
+It isn’t a question. It’s something you already know. You just want them to say it.
+
+They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.
+
+Then they nod.
+
+And start to undress.
+
+You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.
+
+They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.
+
+You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.
+
+They pause once, halfway undressed. You tilt your head just slightly, not pushing, just inviting. They take a breath and keep going.
+
+By the time they’re bare, their skin is flushed, eyes lowered, breath uneven. You don’t speak right away. You want them to sit in the feeling of being seen. The way your eyes run over their body isn’t greedy. It’s reverent.
+
+“Lie down,” you say.
+
+They move to the bed without question. They don’t ask where or how. They just do it. That kind of obedience doesn’t come from submission alone. It comes from trust. It comes from knowing they’re safe with you. That you’ll hold the reins, and never pull harder than they can handle.
+
+You stand. Walk slowly. Let them hear the sound of your footsteps crossing the room. When you reach the edge of the bed, you crawl over them, not with hunger, but with weight. With presence. Your hands brace beside their shoulders. Your mouth hovers over theirs. So close. But not touching.
+
+Their lips part just slightly. You can feel the warmth of their breath against your mouth. You lower yourself, chest against chest, hips against hips, letting them feel all of you, clothed still, but unmistakably there. Pressed into them. Controlling the space. Setting the pace.
+
+“You’ve been waiting for this all day, haven’t you,” you murmur.
+
+They nod, almost imperceptibly.
+
+“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”
+
+Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.
+
+Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want.
+
+Not yet.
+
+You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”
+
+You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.
+
+Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.
+
+When you’re finally bare, you settle your body over them again. Skin to skin now. Their eyes close, lips parting in a quiet gasp.
+
+Your hand cups their jaw. You guide their face toward you and kiss them again, deeper this time. You let your weight rest into the kiss, let your hand slide lower, over their chest, their ribs, down between their thighs.
+
+They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.
+
+Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.
+
+They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.
+
+You tell them what a good job they’re doing.
+
+How much you love watching them fall apart for you.
+
+How safe they are.
+
+How hot they are like this.
+
+You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.
+
+When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.
+
+You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.
+
+Later, you pull the blanket up over them and wrap yourself around their back. Your chest against their spine, your hand still resting on their hip. You press your lips to the back of their neck.
+
+“Still with me?” you ask.
+
+They hum. You feel them smile. You don’t need more than that.
+
+They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.
+
+And you did.
+
+That’s what you do best.
+
+Not just take control. Not just lead.
+
+You protect.
+
+Even when you’re making them moan.
+Even when you’re causing them to squirm in ecstasy.
+Even when they’re at their most exposed.
+
+Especially then.
+
+Because that’s when it matters most.
+</p>
+  </div>
+</body>
+</html>
