--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -174,112 +174,110 @@
   </div>
 
   <div class="content-section">
-    <h2>Erotic Short Story</h2>
-    <p>[You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.
+  <h2>Erotic Short Story</h2>
 
-They’re already standing there, near the center of the room. Waiting.
+  <p>You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.</p>
 
-Their eyes lift to meet yours, wide and uncertain, but not afraid. There’s something else underneath the nerves. A quiet tension. Desire, yes. But also relief. Like they’ve been holding something in all day and now, finally, they don’t have to anymore.
+  <p>They’re already standing there, near the center of the room. Waiting.</p>
 
-You don’t rush. You take your time hanging your coat, rolling your sleeves. The air shifts with each movement you make, deliberate and calm. Your presence takes up space without force, and you know they can feel it.
+  <p>Their eyes lift to meet yours, wide and uncertain, but not afraid. There’s something else underneath the nerves. A quiet tension. Desire, yes. But also relief. Like they’ve been holding something in all day and now, finally, they don’t have to anymore.</p>
 
-When you walk toward them, their breath changes. You hear it catch. They stay rooted where they are, but their hands fidget at their sides. You stop just inches from them, close enough for the heat of your body to wrap around theirs.
+  <p>You don’t rush. You take your time hanging your coat, rolling your sleeves. The air shifts with each movement you make, deliberate and calm. Your presence takes up space without force, and you know they can feel it.</p>
 
-You lift their chin with your fingers, slow and certain, until their eyes are on yours again.
+  <p>When you walk toward them, their breath changes. You hear it catch. They stay rooted where they are, but their hands fidget at their sides. You stop just inches from them, close enough for the heat of your body to wrap around theirs.</p>
 
-“You want to take your clothes off, don’t you.”
+  <p>You lift their chin with your fingers, slow and certain, until their eyes are on yours again.</p>
 
-It isn’t a question. It’s something you already know. You just want them to say it.
+  <p>“You want to take your clothes off, don’t you.”</p>
 
-They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.
+  <p>It isn’t a question. It’s something you already know. You just want them to say it.</p>
 
-Then they nod.
+  <p>They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.</p>
 
-And start to undress.
+  <p>Then they nod. And start to undress.</p>
 
-You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.
+  <p>You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.</p>
 
-They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.
+  <p>They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.</p>
 
-You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.
+  <p>You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.</p>
 
-They pause once, halfway undressed. You tilt your head just slightly, not pushing, just inviting. They take a breath and keep going.
+  <p>They pause once, halfway undressed. You tilt your head just slightly, not pushing, just inviting. They take a breath and keep going.</p>
 
-By the time they’re bare, their skin is flushed, eyes lowered, breath uneven. You don’t speak right away. You want them to sit in the feeling of being seen. The way your eyes run over their body isn’t greedy. It’s reverent.
+  <p>By the time they’re bare, their skin is flushed, eyes lowered, breath uneven. You don’t speak right away. You want them to sit in the feeling of being seen. The way your eyes run over their body isn’t greedy. It’s reverent.</p>
 
-“Lie down,” you say.
+  <p>“Lie down,” you say.</p>
 
-They move to the bed without question. They don’t ask where or how. They just do it. That kind of obedience doesn’t come from submission alone. It comes from trust. It comes from knowing they’re safe with you. That you’ll hold the reins, and never pull harder than they can handle.
+  <p>They move to the bed without question. They don’t ask where or how. They just do it. That kind of obedience doesn’t come from submission alone. It comes from trust. It comes from knowing they’re safe with you. That you’ll hold the reins, and never pull harder than they can handle.</p>
 
-You stand. Walk slowly. Let them hear the sound of your footsteps crossing the room. When you reach the edge of the bed, you crawl over them, not with hunger, but with weight. With presence. Your hands brace beside their shoulders. Your mouth hovers over theirs. So close. But not touching.
+  <p>You stand. Walk slowly. Let them hear the sound of your footsteps crossing the room. When you reach the edge of the bed, you crawl over them, not with hunger, but with weight. With presence. Your hands brace beside their shoulders. Your mouth hovers over theirs. So close. But not touching.</p>
 
-Their lips part just slightly. You can feel the warmth of their breath against your mouth. You lower yourself, chest against chest, hips against hips, letting them feel all of you, clothed still, but unmistakably there. Pressed into them. Controlling the space. Setting the pace.
+  <p>Their lips part just slightly. You can feel the warmth of their breath against your mouth. You lower yourself, chest against chest, hips against hips, letting them feel all of you, clothed still, but unmistakably there. Pressed into them. Controlling the space. Setting the pace.</p>
 
-“You’ve been waiting for this all day, haven’t you,” you murmur.
+  <p>“You’ve been waiting for this all day, haven’t you,” you murmur.</p>
 
-They nod, almost imperceptibly.
+  <p>They nod, almost imperceptibly.</p>
 
-“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”
+  <p>“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”</p>
 
-Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.
+  <p>Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.</p>
 
-Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want.
+  <p>Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want.</p>
 
-Not yet.
+  <p>Not yet.</p>
 
-You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”
+  <p>You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”</p>
 
-You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.
+  <p>You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.</p>
 
-Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.
+  <p>Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.</p>
 
-When you’re finally bare, you settle your body over them again. Skin to skin now. Their eyes close, lips parting in a quiet gasp.
+  <p>When you’re finally bare, you settle your body over them again. Skin to skin now. Their eyes close, lips parting in a quiet gasp.</p>
 
-Your hand cups their jaw. You guide their face toward you and kiss them again, deeper this time. You let your weight rest into the kiss, let your hand slide lower, over their chest, their ribs, down between their thighs.
+  <p>Your hand cups their jaw. You guide their face toward you and kiss them again, deeper this time. You let your weight rest into the kiss, let your hand slide lower, over their chest, their ribs, down between their thighs.</p>
 
-They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.
+  <p>They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.</p>
 
-Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.
+  <p>Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.</p>
 
-They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.
+  <p>They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.</p>
 
-You tell them what a good job they’re doing.
+  <p>You tell them what a good job they’re doing.</p>
 
-How much you love watching them fall apart for you.
+  <p>How much you love watching them fall apart for you.</p>
 
-How safe they are.
+  <p>How safe they are.</p>
 
-How hot they are like this.
+  <p>How hot they are like this.</p>
 
-You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.
+  <p>You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.</p>
 
-When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.
+  <p>When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.</p>
 
-You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.
+  <p>You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.</p>
 
-Later, you pull the blanket up over them and wrap yourself around their back. Your chest against their spine, your hand still resting on their hip. You press your lips to the back of their neck.
+  <p>Later, you pull the blanket up over them and wrap yourself around their back. Your chest against their spine, your hand still resting on their hip. You press your lips to the back of their neck.</p>
 
-“Still with me?” you ask.
+  <p>“Still with me?” you ask.</p>
 
-They hum. You feel them smile. You don’t need more than that.
+  <p>They hum. You feel them smile. You don’t need more than that.</p>
 
-They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.
+  <p>They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.</p>
 
-And you did.
+  <p>And you did.</p>
 
-That’s what you do best.
+  <p>That’s what you do best.</p>
 
-Not just take control. Not just lead.
+  <p>Not just take control. Not just lead.</p>
 
-You protect.
+  <p>You protect.</p>
 
-Even when you’re making them moan.
-Even when you’re causing them to squirm in ecstasy.
-Even when they’re at their most exposed.
+  <p>Even when you’re making them moan. Even when you’re causing them to squirm in ecstasy. Even when they’re at their most exposed.</p>
 
-Especially then.
+  <p>Especially then.</p>
 
-Because that’s when it matters most.
+  <p>Because that’s when it matters most.</p>
+</div>
 </p>
   </div>
 </body>
