--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -12,28 +12,27 @@
       color: white;
       margin: 0;
       padding: 2rem;
-      border: 8px solid;
-      border-image: linear-gradient(to right, #06954E, #064D95, #950606) 1;
+      border: 8px solid #064D95;
+    }
+    .logo-container {
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+    .logo-container img {
+      max-width: 160px;
     }
     h1 {
       font-style: italic;
       color: #064D95;
       text-align: center;
       font-size: 2.5rem;
-      text-shadow: 0 0 6px #064D95;
-    }
-    h2 {
-      font-size: 1.8rem;
-      margin-top: 2rem;
-      color: #ffffff;
-      border-bottom: 2px solid #064D95;
-      padding-bottom: 0.3rem;
+      text-shadow: 0 0 8px #064D95;
+      margin-bottom: 0.5rem;
     }
     .slogan {
       font-style: italic;
       text-align: center;
       font-size: 1.2rem;
-      margin-top: -1rem;
       margin-bottom: 2rem;
       color: #ccc;
     }
@@ -41,18 +40,24 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 2px;
+      gap: 8px;
       margin: 2rem 0;
     }
     .image-wrapper {
       border: 4px solid #064D95;
-      padding: 0;
-      margin: 0;
+      padding: 4px;
+      box-shadow: 0 0 10px #064D95;
+    }
+    .image-wrapper img {
+      width: 220px;
+      height: auto;
+      display: block;
     }
     .divider {
       width: 4px;
       background-color: #064D95;
       height: 100%;
+      box-shadow: 0 0 10px #064D95;
     }
     .content-section {
       margin-bottom: 2rem;
@@ -63,28 +68,27 @@
     .content-section li {
       margin-bottom: 0.5rem;
     }
-    .italic {
-      font-style: italic;
-    }
-    .quote {
-      color: #aaaaaa;
-      font-style: italic;
-      text-align: center;
-      margin-bottom: 2rem;
+    .content-section p {
+      margin-bottom: 1rem;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
+  <div class="logo-container">
+    <img src="/golden-le-libido-logo.png" alt="Le Libido Logo">
+  </div>
+
   <h1>Tender Protector</h1>
   <p class="slogan">"I notice everything. Especially you."</p>
 
   <div class="images-container">
     <div class="image-wrapper">
-      <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" width="300">
+      <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female">
     </div>
     <div class="divider"></div>
     <div class="image-wrapper">
-      <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" width="300">
+      <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male">
     </div>
   </div>
 
@@ -110,8 +114,7 @@
     <p><strong>Ideal Dynamic:</strong><br>
     A gentle but firm dominance paired with a devoted or emotionally attuned submissive creates the most secure and satisfying connection. Think “earned trust” rather than strict control.</p>
   </div>
-
-  <div class="content-section">
+    <div class="content-section">
     <h2>Origins of Desire</h2>
     <ul>
       <li><strong>Evolutionary Biological Theory:</strong> Their desire to protect is tied to deep-rooted evolutionary traits. They’re wired to safeguard those they care for.</li>
@@ -174,111 +177,58 @@
   </div>
 
   <div class="content-section">
-  <h2>Erotic Short Story</h2>
-
-  <p>You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.</p>
-
-  <p>They’re already standing there, near the center of the room. Waiting.</p>
-
-  <p>Their eyes lift to meet yours, wide and uncertain, but not afraid. There’s something else underneath the nerves. A quiet tension. Desire, yes. But also relief. Like they’ve been holding something in all day and now, finally, they don’t have to anymore.</p>
-
-  <p>You don’t rush. You take your time hanging your coat, rolling your sleeves. The air shifts with each movement you make, deliberate and calm. Your presence takes up space without force, and you know they can feel it.</p>
-
-  <p>When you walk toward them, their breath changes. You hear it catch. They stay rooted where they are, but their hands fidget at their sides. You stop just inches from them, close enough for the heat of your body to wrap around theirs.</p>
-
-  <p>You lift their chin with your fingers, slow and certain, until their eyes are on yours again.</p>
-
-  <p>“You want to take your clothes off, don’t you.”</p>
-
-  <p>It isn’t a question. It’s something you already know. You just want them to say it.</p>
-
-  <p>They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.</p>
-
-  <p>Then they nod. And start to undress.</p>
-
-  <p>You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.</p>
-
-  <p>They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.</p>
-
-  <p>You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.</p>
-
-  <p>They pause once, halfway undressed. You tilt your head just slightly, not pushing, just inviting. They take a breath and keep going.</p>
-
-  <p>By the time they’re bare, their skin is flushed, eyes lowered, breath uneven. You don’t speak right away. You want them to sit in the feeling of being seen. The way your eyes run over their body isn’t greedy. It’s reverent.</p>
-
-  <p>“Lie down,” you say.</p>
-
-  <p>They move to the bed without question. They don’t ask where or how. They just do it. That kind of obedience doesn’t come from submission alone. It comes from trust. It comes from knowing they’re safe with you. That you’ll hold the reins, and never pull harder than they can handle.</p>
-
-  <p>You stand. Walk slowly. Let them hear the sound of your footsteps crossing the room. When you reach the edge of the bed, you crawl over them, not with hunger, but with weight. With presence. Your hands brace beside their shoulders. Your mouth hovers over theirs. So close. But not touching.</p>
-
-  <p>Their lips part just slightly. You can feel the warmth of their breath against your mouth. You lower yourself, chest against chest, hips against hips, letting them feel all of you, clothed still, but unmistakably there. Pressed into them. Controlling the space. Setting the pace.</p>
-
-  <p>“You’ve been waiting for this all day, haven’t you,” you murmur.</p>
-
-  <p>They nod, almost imperceptibly.</p>
-
-  <p>“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”</p>
-
-  <p>Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.</p>
-
-  <p>Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want.</p>
-
-  <p>Not yet.</p>
-
-  <p>You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”</p>
-
-  <p>You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.</p>
-
-  <p>Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.</p>
-
-  <p>When you’re finally bare, you settle your body over them again. Skin to skin now. Their eyes close, lips parting in a quiet gasp.</p>
-
-  <p>Your hand cups their jaw. You guide their face toward you and kiss them again, deeper this time. You let your weight rest into the kiss, let your hand slide lower, over their chest, their ribs, down between their thighs.</p>
-
-  <p>They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.</p>
-
-  <p>Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.</p>
-
-  <p>They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.</p>
-
-  <p>You tell them what a good job they’re doing.</p>
-
-  <p>How much you love watching them fall apart for you.</p>
-
-  <p>How safe they are.</p>
-
-  <p>How hot they are like this.</p>
-
-  <p>You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.</p>
-
-  <p>When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.</p>
-
-  <p>You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.</p>
-
-  <p>Later, you pull the blanket up over them and wrap yourself around their back. Your chest against their spine, your hand still resting on their hip. You press your lips to the back of their neck.</p>
-
-  <p>“Still with me?” you ask.</p>
-
-  <p>They hum. You feel them smile. You don’t need more than that.</p>
-
-  <p>They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.</p>
-
-  <p>And you did.</p>
-
-  <p>That’s what you do best.</p>
-
-  <p>Not just take control. Not just lead.</p>
-
-  <p>You protect.</p>
-
-  <p>Even when you’re making them moan. Even when you’re causing them to squirm in ecstasy. Even when they’re at their most exposed.</p>
-
-  <p>Especially then.</p>
-
-  <p>Because that’s when it matters most.</p>
-</div>
-</p>
+    <h2>Erotic Short Story</h2>
+    <p>You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.</p>
+    <p>They’re already standing there, near the center of the room. Waiting.</p>
+    <p>Their eyes lift to meet yours, wide and uncertain, but not afraid. There’s something else underneath the nerves. A quiet tension. Desire, yes. But also relief. Like they’ve been holding something in all day and now, finally, they don’t have to anymore.</p>
+    <p>You don’t rush. You take your time hanging your coat, rolling your sleeves. The air shifts with each movement you make, deliberate and calm. Your presence takes up space without force, and you know they can feel it.</p>
+    <p>When you walk toward them, their breath changes. You hear it catch. They stay rooted where they are, but their hands fidget at their sides. You stop just inches from them, close enough for the heat of your body to wrap around theirs.</p>
+    <p>You lift their chin with your fingers, slow and certain, until their eyes are on yours again.</p>
+    <p>“You want to take your clothes off, don’t you.”</p>
+    <p>It isn’t a question. It’s something you already know. You just want them to say it.</p>
+    <p>They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.</p>
+        <p>Then they nod. And start to undress.</p>
+    <p>You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.</p>
+    <p>They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.</p>
+    <p>You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.</p>
+    <p>They pause once, halfway undressed. You tilt your head just slightly, not pushing, just inviting. They take a breath and keep going.</p>
+    <p>By the time they’re bare, their skin is flushed, eyes lowered, breath uneven. You don’t speak right away. You want them to sit in the feeling of being seen. The way your eyes run over their body isn’t greedy. It’s reverent.</p>
+    <p>“Lie down,” you say.</p>
+    <p>They move to the bed without question. They don’t ask where or how. They just do it. That kind of obedience doesn’t come from submission alone. It comes from trust. It comes from knowing they’re safe with you. That you’ll hold the reins, and never pull harder than they can handle.</p>
+    <p>You stand. Walk slowly. Let them hear the sound of your footsteps crossing the room. When you reach the edge of the bed, you crawl over them, not with hunger, but with weight. With presence. Your hands brace beside their shoulders. Your mouth hovers over theirs. So close. But not touching.</p>
+    <p>Their lips part just slightly. You can feel the warmth of their breath against your mouth. You lower yourself, chest against chest, hips against hips, letting them feel all of you, clothed still, but unmistakably there. Pressed into them. Controlling the space. Setting the pace.</p>
+    <p>“You’ve been waiting for this all day, haven’t you,” you murmur.</p>
+    <p>They nod, almost imperceptibly.</p>
+    <p>“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”</p>
+    <p>Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.</p>
+    <p>Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want. Not yet.</p>
+    <p>You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”</p>
+    <p>You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.</p>
+    <p>Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.</p>
+    <p>When you’re finally bare, you settle your body over them again. Skin to skin now. Their eyes close, lips parting in a quiet gasp.</p>
+    <p>Your hand cups their jaw. You guide their face toward you and kiss them again, deeper this time. You let your weight rest into the kiss, let your hand slide lower, over their chest, their ribs, down between their thighs.</p>
+    <p>They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.</p>
+    <p>Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.</p>
+    <p>They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.</p>
+    <p>You tell them what a good job they’re doing.</p>
+    <p>How much you love watching them fall apart for you.</p>
+    <p>How safe they are.</p>
+    <p>How hot they are like this.</p>
+    <p>You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.</p>
+    <p>When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.</p>
+    <p>You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.</p>
+    <p>Later, you pull the blanket up over them and wrap yourself around their back. Your chest against their spine, your hand still resting on their hip. You press your lips to the back of their neck.</p>
+    <p>“Still with me?” you ask.</p>
+    <p>They hum. You feel them smile. You don’t need more than that.</p>
+    <p>They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.</p>
+    <p>And you did.</p>
+    <p>That’s what you do best.</p>
+    <p>Not just take control. Not just lead.</p>
+    <p>You protect.</p>
+    <p>Even when you’re making them moan.</p>
+    <p>Even when you’re causing them to squirm in ecstasy.</p>
+    <p>Even when they’re at their most exposed.</p>
+    <p>Especially then.</p>
   </div>
 </body>
 </html>
